# SPC418-Fall-2016

./: SPC418-Fall2016.workspace  SPC418-ZC.workspace  SPC418.workspace
src/: README.md
src/assignments/assignment_2/: CMakeLists.txt  package.xml
src/assignments/assignment_2/Q1/: .joint2odom.h.kate-swp
src/assignments/assignment_2/include/: imu.h  joint2odom.h  laserscan_max.h  publisher_subscriber.h
src/assignments/assignment_2/include/assignment_2/: imu.h
src/assignments/assignment_2/launch/: imu_position_estimation.launch  laser_scan_max_world.launch  odometry_world.launch
src/assignments/assignment_2/src/: imu-node.cpp  laser-scan-node.cpp  odometry-node.cpp
src/assignments/assignment_3/: CMakeLists.txt  package.xml
src/assignments/assignment_3/launch/: one-step-controller.launch
src/assignments/assignment_3/src/: input-controller.cpp
src/catbot_control/: CMakeLists.txt  package.xml
src/catbot_control/config/: diff_catbot_kinematics.yaml  four-wheeled-drive-controllers-config.yaml
src/catbot_control/include/: Odometer.h  PublisherSubscriber.h  umbmark-calibration.h
src/catbot_control/launch/: diff_catbot_gazebo_perception.launch  diff_catbot_kinematics.launch  four-wheeled-drive-catbot-kinematics.launch
src/catbot_control/rviz/: four-wheeled-catbot-kinematics.rviz
src/catbot_control/src/: 4WD_control.cpp  UMBmark_calibration.cpp  diff_catbot_encoder.cpp  umbmark-simple.cpp
src/catbot_control/src/kinematics/: four-wheeled-teleop.cpp  kinematic_model.cpp
src/catbot_control/src/teleop/: catbot_teleop.cpp
src/catbot_description/: CMakeLists.txt  package.xml
src/catbot_description/launch/diff_catbot/: diff_catbot_display.launch  diff_catbot_gazebo.launch  diff_catbot_gazebo_willow_garage_world.launch
src/catbot_description/launch/fourWD_catbot/: fourWD_catbot_display.launch  fourWD_catbot_gazebo.launch  fourWD_catbot_gazebo_willow_garage_world.launch
src/catbot_description/meshes/diff_catbot/: base_link.STL  camera.STL  caster_wheel.STL  laser_scanner.STL  left_wheel.STL  right_wheel.STL
src/catbot_description/urdf/: diff_catbot.URDF  diff_catbot_full.urdf  diff_catbot_kinematics.urdf  diff_catbot_perception.urdf  fourWD_catbot.urdf.xacro
src/catbot_description/urdf/include/: camera.urdf.xacro  four_wheeled_drive_plugin.urdf.xacro  imu.urdf.xacro  laser_scanner.urdf.xacro  wheel.urdf.xacro
src/catbot_gazebo/: CMakeLists.txt  package.xml
src/catbot_gazebo_plugins/: CMakeLists.txt  package.xml  setup.py
src/catbot_gazebo_plugins/include/four-wheeled-drive/: gazebo_ros_four_wheeled_drive.h
src/catbot_gazebo_plugins/src/four-wheeled-drive/: gazebo_ros_four_wheeled_drive.cpp
src/catbot_localization/: CMakeLists.txt  package.xml
src/catbot_localization/include/: JointStateToPoseStamped.h  ModelStatesToPoseStamped.h  OdometryToPoseStamped.h  PoseStampedToPath.h  ground-truth.h  imu.h
src/catbot_localization/include/kalman-filter/: kalman-filter.h
src/catbot_localization/launch/: catbot_world.launch  four-wheeled-odometry-vs-ground-truth.launch  ground_truth_path.launch  indoor-catbot-world.launch  kalman-filter-catbot.launch  umbmark.launch  visual_odometry_world.launch
src/catbot_localization/rviz/: encoder_world_config.rviz  visual_odometry_world_config.rviz
src/catbot_localization/src/: ground-truth-path-generator.cpp  ground-truth-pose-generator.cpp  odometry-path-generator.cpp  odometry-pose-generator.cpp  visual-odometry-path-generator.cpp
src/catbot_localization/src/ground-truth/: ground_truth.cpp
src/catbot_localization/src/kalman-filter/: imu-server-node.cpp  kalman-filter-node.cpp  kalman-filter.cpp
src/catbot_localization/src/odom-vs-ground-truth/: odom_vs_ground_truth.cpp
src/catbot_localization/srv/: getIMU.srv
src/catbot_localization/worlds/: catbot_world.world  indoor-catbot-world.world
src/catbot_localization/worlds/models/Storey-Hallway/: model.config  model.sdf
src/catbot_mapping/: CMakeLists.txt  package.xml
src/catbot_moveit/: CMakeLists.txt  package.xml
src/catbot_navigation/: CMakeLists.txt  package.xml
src/catbot_navigation/action/: GoToGoal.action
src/catbot_navigation/include/: GotoGoalController.h
src/catbot_navigation/launch/: diff-catbot-full.launch
src/catbot_navigation/src/: GotoGoalController.cpp  go-to-goal-client.cpp  go-to-goal.cpp
