<?xml version="1.0"?>
<package>
  <name>assignment_2</name>
  <version>0.0.0</version>
  <description>The assignment_2 package</description>

  <maintainer email="mahmoud.abdulgalil@gmail.com">mahmoud</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
</package>
